# atr-pipeline

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  tech_challenge.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260410_0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: annotation.py  dataset.py  evaluation.py  health.py  training.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  dataset.py  evaluation_run.py  training_run.py
backend/app/schemas/: annotation.py  common.py  dataset.py  evaluation.py  training.py
backend/app/services/: annotation_service.py  dataset_service.py  evaluation_service.py  storage_service.py  training_service.py
backend/app/tasks/: job_manager.py
data/: CREDITS.md  download_dataset.py  reduce_dataset.py
docker/: backend-start.sh  mlflow-start.sh
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  SectionHeader.tsx  SplitCard.tsx  StatCard.tsx  StatusBadge.tsx
frontend/src/lib/: config.ts
frontend/src/pages/: AnnotationPage.tsx  DashboardPage.tsx  DatasetPage.tsx  EvaluationPage.tsx  ImportPage.tsx  RunsPage.tsx  TrainingPage.tsx
frontend/src/types/: api.ts
